# nesvary

./: meson.build
include/: nesvary.hpp  ricoh2a03.hpp
src/: nesvary.cpp  ricoh2a03.cpp
tests/: meson.build
tests/src/: general_tests.cpp  ricoh2a03_test.cpp
